[gd_scene format=3 uid="uid://bbubk3klgti8q"]

[ext_resource type="Script" path="res://scripts/title.gd" id="1_b3w7a"]
[ext_resource type="Texture2D" uid="uid://dydaxuxmspkwv" path="res://assets/generator.png" id="1_wosw1"]
[ext_resource type="Texture2D" uid="uid://08bmi5fllv6c" path="res://assets/gasmaskcutout.png" id="2_p6dhs"]
[ext_resource type="Shader" uid="uid://c45ia4jf0n58r" path="res://shaders/title_gasmask.gdshader" id="4_b3w7a"]
[ext_resource type="PackedScene" uid="uid://cvcs1exfgfvdm" path="res://scenes/postproc.tscn" id="4_pyl7j"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_4rr2b"]
shader = ExtResource("4_b3w7a")
shader_parameter/gasmask_texture = ExtResource("2_p6dhs")
shader_parameter/gasmask_mul = Vector2(3, 1)
shader_parameter/gasmask_off = Vector2(1, 0)
shader_parameter/vignette_m = 0.0
shader_parameter/vignette_b = 1.0

[node name="Title" type="Control" unique_id=1640334557]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_b3w7a")
mul = Vector2(0.75, 0.55)
off = Vector2(0.05, 0)
scene_path = "res://scenes/lvl_gen.tscn"

[node name="Postproc" parent="." unique_id=1075234556 instance=ExtResource("4_pyl7j")]

[node name="ColorRect" type="ColorRect" parent="." unique_id=1748298576]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0)

[node name="Generator" type="TextureRect" parent="ColorRect" unique_id=1691873785]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -1144.0
offset_top = -207.0
offset_bottom = 555.0
grow_horizontal = 0
grow_vertical = 2
texture = ExtResource("1_wosw1")
flip_h = true

[node name="GasMask" type="ColorRect" parent="ColorRect" unique_id=437938490]
material = SubResource("ShaderMaterial_4rr2b")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -14.5
offset_bottom = 14.5
grow_horizontal = 2
grow_vertical = 2
pivot_offset_ratio = Vector2(0.5, 0.5)

[node name="Label" type="Label" parent="ColorRect" unique_id=1479448641]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 99.0
offset_top = -3.0
offset_right = -10.0
offset_bottom = 270.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 200
text = "Laughing Gas"

[node name="StartGame" type="Button" parent="ColorRect" unique_id=1939455835]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -430.0
offset_top = -289.0
offset_right = -106.0
offset_bottom = -95.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 70
text = "Begin."

[connection signal="pressed" from="ColorRect/StartGame" to="." method="_on_start_game_pressed"]
